# book-match

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml  release.yml
benchmarks/: __main__.py  bench_matching.py
src/book_match/: __init__.py  __main__.py  cli.py  isbn.py  normalize.py  scoring.py  similarity.py  types.py
src/book_match/batch/: __init__.py  blocking.py  processor.py
src/book_match/core/: __init__.py  config.py  exceptions.py  types.py
src/book_match/isbn/: __init__.py  compare.py  convert.py  normalize.py  validate.py
src/book_match/matching/: __init__.py  engine.py  explainer.py  normalizers.py  similarity.py
src/book_match/sources/: __init__.py  base.py  google_books.py  openlibrary.py  resolver.py
tests/: conftest.py  golden_dataset.json  test_batch.py  test_blocking.py  test_book_fields.py  test_cli.py  test_explainer.py  test_golden.py  test_isbn.py  test_matching.py  test_normalize.py  test_normalizers.py  test_resolver.py  test_scoring.py  test_similarity.py
