[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "book-match"
version = "0.1.0"
description = "Confidence scoring for book metadata matching"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "jellyfish>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/book_match"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
