[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "book-match"
version = "1.2.0"
description = "Fast, explainable book metadata matching with pluggable sources"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Jose" },
]
keywords = [
    "books",
    "metadata",
    "matching",
    "isbn",
    "fuzzy-matching",
    "record-linkage",
    "deduplication",
    "library",
    "catalog",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Typing :: Typed",
]

dependencies = [
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
# For metadata source integrations
sources = [
    "httpx>=0.25",
]

# Full installation with all features
all = [
    "httpx>=0.25",
]

# Development dependencies
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff==0.15.6",
    "mypy==1.19.1",
    "httpx>=0.25",  # Needed for testing sources
]

[project.scripts]
book-match = "book_match.cli:main"

[project.urls]
Homepage = "https://github.com/bibliostack/book-match"
Documentation = "https://github.com/bibliostack/book-match#readme"
Repository = "https://github.com/bibliostack/book-match"
Issues = "https://github.com/bibliostack/book-match/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/book_match"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["book_match"]

[tool.coverage.report]
fail_under = 68

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["book_match"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = false
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["rapidfuzz.*", "httpx.*"]
ignore_missing_imports = true

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): v{version}"
build_command = ""

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^chore\\(release\\)",
    "^Merge",
]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }
